samples/_failures_safe/1761609140_4947a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e607c57.c: In function ‘main’:
./samples/SAFE/__tmp_5e607c57.c:165:5: error: expected declaration or statement at end of input
  165 |     }
      |     ^
